# castle-client

./: .clang-format  .gitignore  .gitmodules  .prettierrc  LICENSE.md  LINUX.md  README.md
.circleci/: config.yml
.github/workflows/: core-clang-tidy.yml
base/: main.lua
base/__ghost__/: bridge.lua  castle.lua  jsEvents.lua  network.lua  portal.lua  require.lua  ui.lua
base/copas/: init.lua
core/: .clang-format  .clang-tidy  .cloc_exclude_list  .gitignore  CMakeLists.txt  README.md  run.sh
core/assets/: test-analog-stick-drag.json  test-c++-aquarium.json  test-drawing2.json  test-lukalot-nikki-c++-aquarium.json  test-motion-basic.json  test-motion-sliding.json  test-motion-slowdown.json  test-motion-speed-limit.json  test-rules-1.json  test-rules-2.json  test-rules-boolean-constant.json  test-rules-touch.json  test-scene-1.json  test-sling-drag.json  test-sling.json  test-watch.json
core/build_ios/: CMakeCache.txt  cmake_install.cmake
core/build_ios/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
core/build_ios/castle-core.xcodeproj/: project.pbxproj
core/src/: api.h  api_android.cpp  api_default.cpp  api_ios.mm  api_web.cpp  archive.h  bridge.cpp  bridge.h  capture.cpp  capture.h  clock.cpp  clock.h  debug.h  engine.cpp  engine.h  gen_love_default_shaders.lua  gesture.cpp  gesture.h  js.h  leaderboards.cpp  leaderboards.h  library.cpp  library.h  love_default_shaders.h  lv.cpp  lv.h  main.cpp  platform.cpp  platform.h  player.cpp  player.h  precomp.h  props.h  scene.cpp  scene.h  screen.h  screenshot.cpp  screenshot.h  snapshot.cpp  snapshot.h  (+7 more)
core/src/behaviors/: all.h  analog_stick.cpp  analog_stick.h  base.h  body.cpp  body.h  bouncy.cpp  bouncy.h  counter.cpp  counter.h  debug_draw.cpp  debug_draw.h  drag.cpp  drag.h  drawing2.cpp  drawing2.h  dummy_drawing.cpp  dummy_drawing.h  falling.cpp  falling.h  friction.cpp  friction.h  local_variables.cpp  local_variables.h  moving.cpp  moving.h  music.cpp  music.h  rotating_motion.cpp  rotating_motion.h  rules.cpp  rules.h  sliding.cpp  sliding.h  sling.cpp  sling.h  slowdown.cpp  slowdown.h  solid.cpp  solid.h  (+8 more)
core/src/core_views/: core_views.cpp  core_views.h  core_views_json.h
core/src/data/: comic.ttf.h  fonts.h  images.h
core/src/editor/: belt.cpp  belt.h  commands.cpp  commands.h  draw_tool.cpp  draw_tool.h  edit_variables.cpp  edit_variables.h  editor.cpp  editor.h  gesture_pan_zoom.cpp  gesture_pan_zoom.h  grab.cpp  grab.h  grid.cpp  grid.h  library_clipboard.cpp  library_clipboard.h  scale_rotate.cpp  scale_rotate.h  selection.cpp  selection.h
core/src/editor/draw/: draw_tool.cpp  draw_tool.h  image_importer.cpp  image_importer.h  image_processing.cpp  image_processing.h  palette_provider.cpp  palette_provider.h  physics_body_data.cpp  physics_body_data.h  subpath_intersections.cpp  subpath_intersections.h  util.cpp  util.h
core/src/editor/draw/subtools/: bitmap_erase_brush_subtool.h  bitmap_erase_fill_subtool.h  bitmap_fill_subtool.h  collision_erase_subtool.h  collision_move_all_subtool.h  collision_move_subtool.h  collision_scale_subtool.h  collision_shape_subtool.h  draw_bend_subtool.h  draw_erase_segment_subtool.h  draw_erase_subtool.h  draw_eyedropper_subtool.h  draw_fill_subtool.h  draw_freehand_subtool.h  draw_line_subtool.h  draw_move_all_subtool.h  draw_move_subtool.h  draw_palette_swap_subtool.h  draw_shape_subtool.h  draw_subtool_interface.h
core/src/editor/draw_subtools/: draw_erase_segment_subtool.h  draw_erase_subtool.h  draw_freehand_subtool.h  draw_line_subtool.h  draw_shape_subtool.h  draw_subtool_interface.h
core/src/editor/sound/: playback_monitor.cpp  playback_monitor.h  song_tool.cpp  song_tool.h  sound_tool.cpp  sound_tool.h  track_preset.cpp  track_preset.h  track_tool.cpp  track_tool.h
core/src/editor/sound/subtools/: pattern_add_note_subtool.h  pattern_erase_note_subtool.h  pattern_note_velocity_subtool.h  sound_subtool_interface.h
core/src/editor/text/: text_tool.cpp  text_tool.h
core/src/expressions/: arithmetic.cpp  basic.cpp  clock_expressions.cpp  expression.h  math.cpp  random.cpp  scene_expressions.cpp  scene_expressions.h  value.h
core/src/feed/: deck_plays.cpp  deck_plays.h  feed.cpp  feed.h  feed_interface.h  horizontal_swipe_feed.cpp  horizontal_swipe_feed.h  horizontal_tap_feed.cpp  horizontal_tap_feed.h  play_button_feed.cpp  play_button_feed.h  vertical_swipe_feed.cpp  vertical_swipe_feed.h
core/src/love/: DrawAlgorithms.cpp  DrawAlgorithms.hpp  DrawData.cpp  DrawData.hpp  DrawDataFrame.cpp  DrawDataFrame.hpp  Ghost.cpp  Ghost.hpp  GhostTypes.hpp
core/src/sound/: pattern.cpp  pattern.h  sample.h  song.cpp  song.h  sound.cpp  sound.h  stream.h  util.h
core/src/sound/instruments/: drums.cpp  drums.h  instrument.cpp  instrument.h  sampler.cpp  sampler.h
core/src/utils/: embedded_image.cpp  embedded_image.h  format_number.h  lru_cache.h  small_vector.h
core/tests/rects-bench/: main.lua
core/tools/: create_overlay_ttf.fontforge  create_overlay_ttf.sh  gen_font_data.sh  gen_image_data.sh  gen_love_default_shaders.lua  main.js  package.json
core/web/: index.html
core/web-publish/: castle-core.data  castle-core.js  castle-core.wasm  index.html
macosx/: release.sh
macosx/ghost.xcodeproj/: project.pbxproj
macosx/obs/: README.md
macosx/tools/: codesign-archive.sh  entitlements-browser.plist
mobile/: .eslintrc.js  .flowconfig  .gitignore  App.js  README.md  apollo.config.js  app.json  babel.config.js  copy_cpp_files_to_android.sh  index.js  metro.config.js  package-lock.json  package.json  run_android.sh  use_local_server.sh  use_staging_server.sh
mobile/android/: adb_crashes.js  build.gradle  sentry.properties  settings.gradle
mobile/assets/: icoMoonConfig.json
mobile/fastlane/: Appfile  Fastfile  README.md
mobile/ios/: API_ios.h  API_ios.mm  CastleAdjust.m  CastleCoreBridge.mm  CastleCoreView.h  CastleCoreView.mm  CastleNativeUtils.m  File.swift  GhostAppState.h  GhostAppState.mm  Podfile  (+8 more)
node/: compile.js  package.json
(+609 files in other folders)
